@@ -541,7 +541,7 @@ BEGIN {
     };
 
     push @good_specs, { 
-        label => "validate w/ numerical regex",
+        label => "validate w/ regex",
         spec  => [
             Counter("--verbose|-v")->default(1),
             Param("--input|-i", qr/\d+/)->default(42),
@@ -612,6 +612,35 @@ BEGIN {
                 exception   => "Getopt::Lucid::Exception::ARGV",
                 error_msg => _keypair_invalid("--def","arch","i386"),
                 desc    => "keypair key not validating" 
+            },            
+        ]
+    };
+
+    push @good_specs, { 
+        label => "validate but allow missing options",
+        spec  => [
+            Param( "mode|m", qr/test|live/ )
+        ],
+        cases => [
+            { 
+                argv    => [ qw() ],
+                result  => { 
+                    "mode" => '',
+                },
+                desc    => "no param validates"
+            },            
+            { 
+                argv    => [ qw( --mode test ) ],
+                result  => { 
+                    "mode" => 'test',
+                },
+                desc    => "param input validates"
+            },            
+            { 
+                argv    => [ qw( --mode foo ) ],
+                exception   => "Getopt::Lucid::Exception::ARGV",
+                error_msg => _param_invalid("mode","foo"),
+                desc    => "param mode not validating" 
             },            
         ]
     };
@@ -905,15 +934,6 @@ BEGIN {
         exception => "Getopt::Lucid::Exception::Spec",
         error_msg => _default_keypair("-v"),
         label => "keypair default not hash reference"
-    };
-
-    push @bad_specs, { 
-        spec  => [
-            Param("-v", qr/[a-z]+/ ),
-        ],
-        exception => "Getopt::Lucid::Exception::Spec",
-        error_msg => _default_invalid("-v",""),
-        label => "unspecified default not validating vs regex"
     };
 
     push @bad_specs, {
